Disable fixed navbar on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+@media screen and (max-height: 700px) {
+  .navbar.is-fixed-top {
+    position: relative;
+  }
+
+  html.has-navbar-fixed-top {
+    padding-top: 0;
+  }
+}
+
 /* Navbar */
 nav {
   filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.6));
